# PolarView-Aggregator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  polarview-aggregator_test
source/include/: Aggregator.hpp  PolarViewAggregator.hpp  SensorAggregator.hpp
source/src/: PolarViewAggregator.cpp  PolarViewAggregator.cpp.autosave  SensorAggregator.cpp
test/: PolarViewAggregatorTest.cpp
